contrib/Kaluza/hampi/src/hampi/parser/HampiParser.java
// $ANTLR 3.1b1 src/hampi/parser/Hampi.g 2009-01-17 21:59:26
 
     package hampi.parser; 
   

import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

public class HampiParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CFGPROD", "ASSIGN", "PROGRAM", "CFGOPTION", "CFGSTAR", "CFGPLUS", "FIX", "CONTAINS", "IN", "ASSERT", "CONCAT", "VAR", "CFG", "REG", "VAL", "CONST", "RANGE", "CHARSEQRANGE", "OR", "NOTIN", "NOTCONTAINS", "CFGCHARRANGE", "CFGCHARSEQRANGE", "CFGPRODELEMSET", "VALS", "SEMI", "KW_VAR", "ID", "COLON", "INT", "KW_CFG", "BAR", "LPAREN", "RPAREN", "QUESTION", "STAR", "PLUS", "LSQUARE", "CHAR_LIT", "MINUS", "RSQUARE", "CHAR_SEQ", "STR_LIT", "KW_REG", "KW_FIX", "COMMA", "KW_STAR", "KW_OR", "KW_CONCAT", "KW_VAL", "KW_ASSERT", "KW_IN", "KW_CONTAINS", "KW_NOT", "KW_QUERY", "EQUALS", "EscapeSequence", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT"
    };
    public static final int CFGSTAR=8;
    public static final int FIX=10;
    public static final int STAR=39;
    public static final int KW_VAL=53;
    public static final int LSQUARE=41;
    public static final int CONST=19;
    public static final int CFGPROD=4;
    public static final int CONTAINS=11;
    public static final int EQUALS=59;
    public static final int ID=31;
    public static final int CFG=16;
    public static final int EOF=-1;
    public static final int LPAREN=36;
    public static final int KW_VAR=30;
    public static final int VALS=28;
    public static final int CHAR_SEQ=45;
    public static final int RPAREN=37;
    public static final int IN=12;
    public static final int CFGOPTION=7;
    public static final int COMMA=49;
    public static final int CFGPRODELEMSET=27;
    public static final int CFGCHARRANGE=25;
    public static final int KW_IN=55;
    public static final int VAL=18;
    public static final int PLUS=40;
    public static final int VAR=15;
    public static final int COMMENT=63;
    public static final int NOTCONTAINS=24;
    public static final int KW_FIX=48;
    public static final int KW_REG=47;
    public static final int LINE_COMMENT=64;
    public static final int CONCAT=14;
    public static final int KW_ASSERT=54;
    public static final int STR_LIT=46;
    public static final int KW_QUERY=58;
    public static final int RANGE=20;
    public static final int INT=33;
    public static final int CHAR_LIT=42;
    public static final int RSQUARE=44;
    public static final int MINUS=43;
    public static final int REG=17;
    public static final int ASSERT=13;
    public static final int SEMI=29;
    public static final int CFGCHARSEQRANGE=26;
    public static final int CFGPLUS=9;
    public static final int COLON=32;
    public static final int WS=62;
    public static final int NEWLINE=61;
    public static final int KW_CONCAT=52;
    public static final int QUESTION=38;
    public static final int KW_OR=51;
    public static final int KW_CONTAINS=56;
    public static final int CHARSEQRANGE=21;
    public static final int OR=22;
    public static final int ASSIGN=5;
    public static final int PROGRAM=6;
    public static final int KW_STAR=50;
    public static final int EscapeSequence=60;
    public static final int BAR=35;
    public static final int KW_NOT=57;
    public static final int KW_CFG=34;
    public static final int NOTIN=23;

    // delegates
    // delegators


        public HampiParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public HampiParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    @Override
    public String[] getTokenNames() { return HampiParser.tokenNames; }
    @Override
    public String getGrammarFileName() { return "src/hampi/parser/Hampi.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // src/hampi/parser/Hampi.g:47:2: program : ( statement SEMI )+ -> ^( PROGRAM ( statement )+ ) ;
    public final HampiParser.program_return program() throws RecognitionException {
        HampiParser.program_return retval = new HampiParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI2=null;
        HampiParser.statement_return statement1 = null;


        Object SEMI2_tree=null;
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // src/hampi/parser/Hampi.g:47:10: ( ( statement SEMI )+ -> ^( PROGRAM ( statement )+ ) )
            // src/hampi/parser/Hampi.g:47:12: ( statement SEMI )+
            {
            // src/hampi/parser/Hampi.g:47:12: ( statement SEMI )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==KW_VAR||LA1_0==KW_CFG||LA1_0==KW_REG||(LA1_0>=KW_VAL && LA1_0<=KW_ASSERT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/hampi/parser/Hampi.g:47:13: statement SEMI
            	    {
            	    pushFollow(FOLLOW_statement_in_program276);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ){
                    stream_statement.add(statement1.getTree());
                  }
            	    SEMI2=(Token)match(input,SEMI,FOLLOW_SEMI_in_program278); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ){
                    stream_SEMI.add(SEMI2);
                  }


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ){
                    break loop1;
                  }
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = adaptor.nil();
            // 47:30: -> ^( PROGRAM ( statement )+ )
            {
                // src/hampi/parser/Hampi.g:47:33: ^( PROGRAM ( statement )+ )
                {
                Object root_1 = adaptor.nil();
                root_1 = adaptor.becomeRoot(adaptor.create(PROGRAM, "PROGRAM"), root_1);

                if ( !(stream_statement.hasNext()) )
                  throw new RewriteEarlyExitException();
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // src/hampi/parser/Hampi.g:49:2: statement : ( vardeclStmt | cfgStmt | regStmt | valDeclStmt | assertStmt );
    public final HampiParser.statement_return statement() throws RecognitionException {
        HampiParser.statement_return retval = new HampiParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        HampiParser.vardeclStmt_return vardeclStmt3 = null;

        HampiParser.cfgStmt_return cfgStmt4 = null;

        HampiParser.regStmt_return regStmt5 = null;

        HampiParser.valDeclStmt_return valDeclStmt6 = null;

        HampiParser.assertStmt_return assertStmt7 = null;



        try {
            // src/hampi/parser/Hampi.g:49:12: ( vardeclStmt | cfgStmt | regStmt | valDeclStmt | assertStmt )
            int alt2=5;
            switch ( input.LA(1) ) {
            case KW_VAR:
                {
                alt2=1;
                }
                break;
            case KW_CFG:
                {
                alt2=2;
                }
                break;
            case KW_REG:
                {
                alt2=3;
                }
                break;
            case KW_VAL:
                {
                alt2=4;
                }
                break;
            case KW_ASSERT:
                {
                alt2=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // src/hampi/parser/Hampi.g:49:14: vardeclStmt
                    {
                    root_0 = adaptor.nil();

                    pushFollow(FOLLOW_vardeclStmt_in_statement299);
                    vardeclStmt3=vardeclStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ){
                      adaptor.addChild(root_0, vardeclStmt3.getTree());
                    }

                    }
                    break;
                case 2 :
                    // src/hampi/parser/Hampi.g:50:14: cfgStmt
                    {
                    root_0 = adaptor.nil();

                    pushFollow(FOLLOW_cfgStmt_in_statement315);
                    cfgStmt4=cfgStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ){
                      adaptor.addChild(root_0, cfgStmt4.getTree());
                    }

                    }
                    break;
                case 3 :
                    // src/hampi/parser/Hampi.g:51:14: regStmt
                    {
                    root_0 = adaptor.nil();

                    pushFollow(FOLLOW_regStmt_in_statement330);
                    regStmt5=regStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ){
                      adaptor.addChild(root_0, regStmt5.getTree());
                    }

                    }
                    break;
                case 4 :
                    // src/hampi/parser/Hampi.g:52:14: valDeclStmt
                    {
                    root_0 = adaptor.nil();

                    pushFollow(FOLLOW_valDeclStmt_in_statement345);
                    valDeclStmt6=valDeclStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ){
                      adaptor.addChild(root_0, valDeclStmt6.getTree());
                    }

                    }
                    break;
                case 5 :
                    // src/hampi/parser/Hampi.g:53:14: assertStmt
                    {
                    root_0 = adaptor.nil();

                    pushFollow(FOLLOW_assertStmt_in_statement360);
                    assertStmt7=assertStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ){
                      adaptor.addChild(root_0, assertStmt7.getTree());
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end statement

    public static class vardeclStmt_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start vardeclStmt
    // src/hampi/parser/Hampi.g:56:2: vardeclStmt : ( KW_VAR ID COLON INT ) -> ^( VAR ID INT ) ;
    public final HampiParser.vardeclStmt_return vardeclStmt() throws RecognitionException {
        HampiParser.vardeclStmt_return retval = new HampiParser.vardeclStmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token KW_VAR8=null;
        Token ID9=null;
        Token COLON10=null;
        Token INT11=null;

        Object KW_VAR8_tree=null;
        Object ID9_tree=null;
        Object COLON10_tree=null;
        Object INT11_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_KW_VAR=new RewriteRuleTokenStream(adaptor,"token KW_VAR");

        try {
            // src/hampi/parser/Hampi.g:56:14: ( ( KW_VAR ID COLON INT ) -> ^( VAR ID INT ) )
            // src/hampi/parser/Hampi.g:56:16: ( KW_VAR ID COLON INT )
            {
            // src/hampi/parser/Hampi.g:56:16: ( KW_VAR ID COLON INT )
            // src/hampi/parser/Hampi.g:56:17: KW_VAR ID COLON INT
            {
            KW_VAR8=(Token)match(input,KW_VAR,FOLLOW_KW_VAR_in_vardeclStmt393); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_KW_VAR.add(KW_VAR8);
            }

            ID9=(Token)match(input,ID,FOLLOW_ID_in_vardeclStmt395); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_ID.add(ID9);
            }

            COLON10=(Token)match(input,COLON,FOLLOW_COLON_in_vardeclStmt397); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_COLON.add(COLON10);
            }

            INT11=(Token)match(input,INT,FOLLOW_INT_in_vardeclStmt399); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_INT.add(INT11);
            }


            }



            // AST REWRITE
            // elements: ID, INT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = adaptor.nil();
            // 56:38: -> ^( VAR ID INT )
            {
                // src/hampi/parser/Hampi.g:56:41: ^( VAR ID INT )
                {
                Object root_1 = adaptor.nil();
                root_1 = adaptor.becomeRoot(adaptor.create(VAR, "VAR"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_INT.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end vardeclStmt

    public static class cfgStmt_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start cfgStmt
    // src/hampi/parser/Hampi.g:58:2: cfgStmt : ( KW_CFG cfgProduction ) -> ^( CFG cfgProduction ) ;
    public final HampiParser.cfgStmt_return cfgStmt() throws RecognitionException {
        HampiParser.cfgStmt_return retval = new HampiParser.cfgStmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token KW_CFG12=null;
        HampiParser.cfgProduction_return cfgProduction13 = null;


        Object KW_CFG12_tree=null;
        RewriteRuleTokenStream stream_KW_CFG=new RewriteRuleTokenStream(adaptor,"token KW_CFG");
        RewriteRuleSubtreeStream stream_cfgProduction=new RewriteRuleSubtreeStream(adaptor,"rule cfgProduction");
        try {
            // src/hampi/parser/Hampi.g:58:10: ( ( KW_CFG cfgProduction ) -> ^( CFG cfgProduction ) )
            // src/hampi/parser/Hampi.g:58:12: ( KW_CFG cfgProduction )
            {
            // src/hampi/parser/Hampi.g:58:12: ( KW_CFG cfgProduction )
            // src/hampi/parser/Hampi.g:58:13: KW_CFG cfgProduction
            {
            KW_CFG12=(Token)match(input,KW_CFG,FOLLOW_KW_CFG_in_cfgStmt421); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_KW_CFG.add(KW_CFG12);
            }

            pushFollow(FOLLOW_cfgProduction_in_cfgStmt423);
            cfgProduction13=cfgProduction();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ){
              stream_cfgProduction.add(cfgProduction13.getTree());
            }

            }



            // AST REWRITE
            // elements: cfgProduction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = adaptor.nil();
            // 58:35: -> ^( CFG cfgProduction )
            {
                // src/hampi/parser/Hampi.g:58:38: ^( CFG cfgProduction )
                {
                Object root_1 = adaptor.nil();
                root_1 = adaptor.becomeRoot(adaptor.create(CFG, "CFG"), root_1);

                adaptor.addChild(root_1, stream_cfgProduction.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cfgStmt

    public static class cfgProduction_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start cfgProduction
    // src/hampi/parser/Hampi.g:60:2: cfgProduction : ( ID ASSIGN cfgProductionSet ) -> ^( CFGPROD ID cfgProductionSet ) ;
    public final HampiParser.cfgProduction_return cfgProduction() throws RecognitionException {
        HampiParser.cfgProduction_return retval = new HampiParser.cfgProduction_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID14=null;
        Token ASSIGN15=null;
        HampiParser.cfgProductionSet_return cfgProductionSet16 = null;


        Object ID14_tree=null;
        Object ASSIGN15_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_cfgProductionSet=new RewriteRuleSubtreeStream(adaptor,"rule cfgProductionSet");
        try {
            // src/hampi/parser/Hampi.g:60:16: ( ( ID ASSIGN cfgProductionSet ) -> ^( CFGPROD ID cfgProductionSet ) )
            // src/hampi/parser/Hampi.g:60:18: ( ID ASSIGN cfgProductionSet )
            {
            // src/hampi/parser/Hampi.g:60:18: ( ID ASSIGN cfgProductionSet )
            // src/hampi/parser/Hampi.g:60:19: ID ASSIGN cfgProductionSet
            {
            ID14=(Token)match(input,ID,FOLLOW_ID_in_cfgProduction443); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_ID.add(ID14);
            }

            ASSIGN15=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_cfgProduction445); if (state.failed) return retval; 
            if ( state.backtracking==0 ){
              stream_ASSIGN.add(ASSIGN15);
            }

            pushFollow(FOLLOW_cfgProductionSet_in_cfgProduction448);
            cfgProductionSet16=cfgProductionSet();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ){
              stream_cfgProductionSet.add(cfgProductionSet16.getTree());
            }

            }



            // AST REWRITE
            // elements: cfgProductionSet, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = adaptor.nil();
            // 60:49: -> ^( CFGPROD ID cfgProductionSet )
            {
                // src/hampi/parser/Hampi.g:60:52: ^( CFGPROD ID cfgProductionSet )
                {
                Object root_1 = adaptor.nil();
                root_1 = adaptor.becomeRoot(adaptor.create(CFGPROD, "CFGPROD"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_cfgProductionSet.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cfgProduction

    public static class cfgProductionSet_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };

    // $ANTLR start cfgProductionSet
    // src/hampi/parser/Hampi.g:62:2: cfgProductionSet : ( cfgProductionElementSet ( BAR cfgProductionElementSet )* ) -> ( cfgProductionElementSet )+ ;
    public final HampiParser.cfgProductionSet_return cfgProductionSet() throws RecognitionException {
        HampiParser.cfgProductionSet_return retval = new HampiParser.cfgProductionSet_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token BAR18=null;
        HampiParser.cfgProductionElementSet_return cfgProductionElementSet17 = null;

        HampiParser.cfgProductionElementSet_return cfgProductionElementSet19 = null;


        Object BAR18_tree=null;
        RewriteRuleTokenStream stream_BAR=new RewriteRuleTokenStream(adaptor,"token BAR");
        RewriteRuleSubtreeStream stream_cfgProductionElementSet=new RewriteRuleSubtreeStream(adaptor,"rule cfgProductionElementSet");
        try {
            // src/hampi/parser/Hampi.g:62:19: ( ( cfgProductionElementSet ( BAR cfgProductionElementSet )* ) -> ( cfgProductionElementSet )+ )
            // src/hampi/parser/Hampi.g:62:21: ( cfgProductionElementSet ( BAR cfgProductionElementSet )* )
            {
            // src/hampi/parser/Hampi.g:62:21: ( cfgProductionElementSet ( BAR cfgProductionElementSet )* )
            // src/hampi/parser/Hampi.g:62:22: cfgProductionElementSet ( BAR cfgProductionElementSet )*
            {
            pushFollow(FOLLOW_cfgProductionElementSet_in_cfgProductionSet472);
            cfgProductionElementSet17=cfgProductionElementSet();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ){
              stream_cfgProductionElementSet.add(cfgProductionElementSet17.getTree());
            }
            // src/hampi/parser/Hampi.g:62:46: ( BAR cfgProductionElementSet )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==BAR) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/hampi/parser/Hampi.g:62:47: BAR cfgProductionElementSet
            	    {
            	    BAR18=(Token)match(input,BAR,FOLLOW_BAR_in_cfgProductionSet475); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ){
                    stream_BAR.add(BAR18);
                  }

            	    pushFollow(FOLLOW_cfgProductionElementSet_in_cfgProductionSet477);
            	    cfgProductionElementSet19=cfgProductionElementSet();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ){
                    stream_cfgProductionElementSet.add(cfgProductionElementSet19.getTree());
                  }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }



            // AST REWRITE
            // elements: cfgProductionElementSet
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = adaptor.nil();
            // 62:78: -> ( cfgProductionElementSet )+
            {
                if ( !(stream_cfgProductionElementSet.hasNext()) )
                  throw new RewriteEarlyExitException();
                while ( stream_cfgProductionElementSet.hasNext() ) {
                    adaptor.addChild(root_0, stream_cfgProductionElementSet.nextTree());

                }
                stream_cfgProductionElementSet.reset();

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cfgProductionSet

    public static class cfgProductionElementSet_return extends ParserRuleReturnScope {
        Object tree;
        @Override
        public Object getTree() { return tree; }
    };
